classDiagram
    class User {
        +UUID id
        +String name
        +String email
        +String phone
        +String role
        +Boolean is_verified
        +UUID company_id
        +String profile_photo_url
        +login() Boolean
        +register() User
        +updateProfile() User
    }

    class Company {
        +UUID id
        +String name
        +String industry
        +String address
        +String city
        +String phone
    }

    class HydraulicEquipment {
        +UUID id
        +UUID company_id
        +String name
        +String type
        +String brand
        +String model
        +String serial_number
        +Integer rated_pressure_bar
        +Boolean is_active
        +create() Equipment
        +update() Equipment
        +deactivate() void
    }

    class Booking {
        +UUID id
        +UUID company_id
        +UUID created_by
        +UUID technician_id
        +UUID equipment_id
        +String service_type
        +String urgency_level
        +String status
        +String description
        +String site_address
        +String site_city
        +Float latitude
        +Float longitude
        +DateTime claimed_at
        +DateTime completed_at
        +create() Booking
        +claim(techId) void
        +updateStatus(status) void
        +cancel() void
    }

    class HydraulicReport {
        +UUID id
        +UUID booking_id
        +UUID technician_id
        +Integer system_pressure_bar
        +Integer actual_pressure_bar
        +String oil_condition
        +String oil_brand
        +Float oil_volume_liter
        +Boolean leak_found
        +String leak_location
        +String repair_notes
        +String recommendation
        +create() Report
        +generatePDF() Bytes
    }

    class InspectionItem {
        +UUID id
        +UUID report_id
        +String component_type
        +String component_name
        +String condition
        +String recommendation
        +JSON specifications
    }

    class Notification {
        +UUID id
        +UUID user_id
        +UUID booking_id
        +String title
        +String message
        +String type
        +Boolean is_read
        +DateTime created_at
        +markAsRead() void
    }

    User "N" --> "1" Company : belongs to
    Company "1" --> "0..*" HydraulicEquipment : owns
    Company "1" --> "0..*" Booking : has
    User "1" --> "0..*" Booking : creates
    User "1" --> "0..*" Booking : handles as teknisi
    HydraulicEquipment "1" --> "0..*" Booking : referenced in
    Booking "1" --> "0..1" HydraulicReport : has
    HydraulicReport "1" --> "0..*" InspectionItem : contains
    Booking "1" --> "0..*" Notification : triggers
    User "1" --> "0..*" Notification : receives
